--- a/app/src/main/res/layout/item_more_review.xml
+++ b/app/src/main/res/layout/item_more_review.xml
@@ -44,28 +44,63 @@
 
                         <TextView
                             android:id="@+id/nickName"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="28dp"
-                            android:layout_marginTop="7dp"
+                            android:layout_marginTop="5dp"
                             android:layout_marginEnd="10dp"
                             android:singleLine="true"
                             android:text="이름"
                             android:textColor="@color/black"
                             android:textSize="20sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toStartOf="@+id/review_modify"
                             app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
+                            android:id="@+id/level"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginBottom="4dp"
+                            android:singleLine="true"
+                            android:text="Lv."
+                            android:textColor="@color/black"
+                            android:textSize="12sp"
+                            app:layout_constraintBottom_toBottomOf="@+id/nickName"
+                            app:layout_constraintStart_toEndOf="@+id/nickName" />
+
+                        <TextView
+                            android:id="@+id/level_and_location"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="3dp"
+                            android:layout_marginBottom="4dp"
+                            android:singleLine="true"
+                            android:text="레벨"
+                            android:textColor="@color/black"
+                            android:textSize="12sp"
+                            app:layout_constraintBottom_toBottomOf="@+id/nickName"
+                            app:layout_constraintStart_toEndOf="@+id/level" />
+
+                        <TextView
+                            android:id="@+id/reviewMore_writeTime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:singleLine="true"
+                            android:text="작성시간"
+                            android:textColor="@color/black"
+                            android:textSize="12sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/nickName" />
+
+                        <TextView
                             android:id="@+id/review_modify"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
                             android:layout_marginEnd="10dp"
                             android:clickable="true"
                             android:text="수정"
-                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toStartOf="@+id/review_delete"
                             app:layout_constraintTop_toTopOf="parent" />
 
@@ -83,10 +118,10 @@
                             android:id="@+id/review_delete"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
                             android:layout_marginEnd="20dp"
                             android:clickable="true"
                             android:text="삭제"
-                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
@@ -100,34 +135,6 @@
                             app:layout_constraintStart_toStartOf="@+id/review_delete"
                             app:layout_constraintTop_toBottomOf="@+id/review_delete" />
 
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:id="@+id/level"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:singleLine="true"
-                            android:text="Lv."
-                            android:textColor="@color/black"
-                            android:textSize="15sp"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <TextView
-                            android:id="@+id/level_and_location"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="3dp"
-                            android:singleLine="true"
-                            android:text="레벨 및 위치인증"
-                            android:textColor="@color/black"
-                            android:textSize="15sp"
-                            app:layout_constraintStart_toEndOf="@+id/level"
-                            app:layout_constraintTop_toTopOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
