--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -276,10 +276,8 @@
                     android:layout_marginTop="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/myReview2" />
-                <!--                 android:nestedScrollingEnabled="false"-->
-                <!--                 android:overScrollMode="never"-->
-                <!--                 리사이클러뷰 스크롤 죽이기 위한 코드-->
+                    app:layout_constraintTop_toBottomOf="@+id/myReview2"
+                    android:nestedScrollingEnabled="false" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -312,9 +310,6 @@
                     android:textSize="8dp" />
             </LinearLayout>
 
-
-            <!--Footer-->
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
