--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -67,7 +67,7 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollview5"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -329,22 +329,23 @@
                     android:layout_marginTop="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/moreReview9" />
+                    app:layout_constraintTop_toBottomOf="@+id/moreReview9"
+                    android:nestedScrollingEnabled="false"/>
 
                 <LinearLayout
                     android:id="@+id/cafeDetailPage_footer"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="80dp"
                     android:orientation="horizontal"
                     android:padding="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/cafeDetailReviewRecyclerView"/>
+                    app:layout_constraintTop_toBottomOf="@id/cafeDetailReviewRecyclerView" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
