--- a/app/src/main/res/layout/fragment_cafe_registration.xml
+++ b/app/src/main/res/layout/fragment_cafe_registration.xml
@@ -167,10 +167,11 @@
 
                 <EditText
                     android:id="@+id/cafe_name_input"
-                    android:layout_width="200dp"
+                    android:layout_width="0dp"
                     android:layout_height="27dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="15dp"
+                    android:layout_marginEnd="10dp"
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
                     android:gravity="center_vertical"
@@ -178,6 +179,7 @@
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
+                    app:layout_constraintEnd_toStartOf="@+id/checked_overlap_button"
                     app:layout_constraintStart_toEndOf="@+id/cafe_name"
                     app:layout_constraintTop_toBottomOf="@+id/caution_required_fields_textView" />
 
@@ -185,13 +187,13 @@
                     android:id="@+id/checked_overlap_button"
                     android:layout_width="70dp"
                     android:layout_height="27dp"
-                    android:layout_marginStart="10dp"
                     android:layout_marginTop="15dp"
+                    android:layout_marginEnd="15dp"
                     android:background="@drawable/edge_square_brown"
                     android:text="중복확인"
                     android:textColor="@color/white"
                     android:textSize="15sp"
-                    app:layout_constraintStart_toEndOf="@+id/cafe_name_input"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/caution_required_fields_textView" />
 
                 <TextView
@@ -211,7 +213,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="7dp"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="15dp"
                     android:text="Ex) 위메카커피 메카점"
                     android:textColor="#000000"
                     android:textSize="12sp"
@@ -254,16 +256,18 @@
 
                 <EditText
                     android:id="@+id/cafe_address_input"
-                    android:layout_width="280dp"
+                    android:layout_width="0dp"
                     android:layout_height="27dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="15dp"
+                    android:layout_marginEnd="15dp"
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
                     android:gravity="center_vertical"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/cafe_address"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -414,7 +418,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="7dp"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="15dp"
                     android:text="Ex) 00:00, 24:00"
                     android:textColor="@color/black"
                     android:textSize="12sp"
@@ -467,9 +471,9 @@
 
                 <TextView
                     android:id="@+id/basic_tag1"
-                    android:layout_width="100dp"
+                    android:layout_width="90dp"
                     android:layout_height="35dp"
-                    android:layout_marginStart="12dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/selected_tag_textview"
                     android:gravity="center_horizontal|center_vertical"
@@ -482,8 +486,9 @@
 
                 <TextView
                     android:id="@+id/basic_tag2"
-                    android:layout_width="100dp"
+                    android:layout_width="90dp"
                     android:layout_height="35dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/selected_tag_textview"
                     android:gravity="center_horizontal|center_vertical"
@@ -492,16 +497,15 @@
                     android:textColor="@color/brown"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@+id/basic_tag3"
                     app:layout_constraintStart_toEndOf="@+id/basic_tag1"
                     app:layout_constraintTop_toBottomOf="@+id/basicTag_textView" />
 
                 <TextView
                     android:id="@+id/basic_tag3"
-                    android:layout_width="100dp"
+                    android:layout_width="90dp"
                     android:layout_height="35dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginEnd="10dp"
                     android:background="@drawable/selected_tag_textview"
                     android:gravity="center_horizontal|center_vertical"
                     android:singleLine="true"
@@ -509,20 +513,22 @@
                     android:textColor="@color/brown"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@+id/add_tag_button"
+                    app:layout_constraintStart_toEndOf="@+id/basic_tag2"
                     app:layout_constraintTop_toBottomOf="@+id/basicTag_textView" />
 
                 <Button
                     android:id="@+id/add_tag_button"
-                    android:layout_width="60dp"
+                    android:layout_width="0dp"
                     android:layout_height="35dp"
+                    android:layout_marginStart="15dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="15dp"
                     android:background="@drawable/edge_square_brown"
                     android:text="추가"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/basic_tag3"
                     app:layout_constraintTop_toBottomOf="@+id/basicTag_textView" />
 
                 <TextView
