--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -87,8 +87,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="30dp"
-                    android:text="수제커피머신 님"
-                    android:textColor="#000000"
+                    android:textColor="@color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +101,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
-                    android:text="2등급 원두"
                     android:textColor="@color/orange"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -200,7 +198,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
-                    android:text="#스터디"
                     android:textColor="@color/orange"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -226,7 +223,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="55dp"
-                    android:text="#커피맛"
                     android:textColor="@color/orange"
                     android:textSize="20sp"
                     android:textStyle="bold"
