ListCafelistFragment , ReviewCafeListItem DB연결 --> // 기존에 예시데이터로만 뜨던 태그, DB연결 후 카페디테일의 태그 등장방식을 채택해 추천태그 2개 등장하게 변경
카페시간 분할해서 등장하게 변경

이에 따른 어뎁터와 뷰홀더, 아이템 변경

item_list_cafelist.xml 레이아웃 변경 // 마진 등

--- a/app/src/main/res/layout/item_list_cafelist.xml
+++ b/app/src/main/res/layout/item_list_cafelist.xml
@@ -68,13 +68,14 @@
                     android:id="@+id/cafeList_hashTag1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:paddingLeft="1dp"
+                    android:paddingRight="1dp"
                     android:singleLine="true"
                     android:text="#해시태그1"
                     android:textColor="@color/brown"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -83,10 +84,12 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:paddingLeft="1dp"
+                    android:paddingRight="1dp"
                     android:singleLine="true"
                     android:text="#해시태그2"
                     android:textColor="@color/brown"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
