카페 삭제 요청 작업 완

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -227,6 +227,10 @@
         <action
             android:id="@+id/cafe_delete_to_cafe_detail"
             app:destination="@id/navigation_cafe_detail" />
+
+        <action
+            android:id="@+id/cafe_delete_to_home"
+            app:destination="@+id/navigation_home"/>
     </fragment>
 
     <fragment
