fragment_review 별점 뷰페이저 리뷰작성과 다른거 수정 -->
fragment_review.xml 레이아웃 수정

viewpager_rating_seat.xml
viewpager_rating_study.xml
viewpager_rating_taste.xml
변경할 필요 없지만 일단 수정

--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -411,13 +411,14 @@
                     android:id="@+id/manyseat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
                     android:text="다인좌석"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/rating_manyseat"
-                    app:layout_constraintHorizontal_bias="0.6"
+                    app:layout_constraintHorizontal_bias="0.61"
                     app:layout_constraintStart_toEndOf="@+id/rating_twoseat"
-                    app:layout_constraintTop_toTopOf="@+id/twoseat" />
+                    app:layout_constraintTop_toBottomOf="@+id/toilet" />
 
                 <RatingBar
                     android:id="@+id/rating_manyseat"
@@ -437,13 +438,12 @@
                     android:id="@+id/toilet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
                     android:text="화장실"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/manyseat"
                     app:layout_constraintStart_toStartOf="@+id/manyseat"
-                    app:layout_constraintTop_toBottomOf="@+id/manyseat" />
+                    app:layout_constraintTop_toTopOf="@+id/twoseat" />
 
                 <RatingBar
                     android:id="@+id/rating_toilet"
@@ -547,13 +547,14 @@
                     android:id="@+id/quiet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
                     android:text="조용함"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/rating_quiet"
                     app:layout_constraintHorizontal_bias="0.6"
                     app:layout_constraintStart_toEndOf="@+id/rating_wifi"
-                    app:layout_constraintTop_toTopOf="@+id/wifi" />
+                    app:layout_constraintTop_toBottomOf="@+id/light" />
 
                 <RatingBar
                     android:id="@+id/rating_quiet"
@@ -573,13 +574,12 @@
                     android:id="@+id/light"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
                     android:text="조명"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/quiet"
                     app:layout_constraintStart_toStartOf="@+id/quiet"
-                    app:layout_constraintTop_toBottomOf="@+id/quiet" />
+                    app:layout_constraintTop_toTopOf="@+id/wifi" />
 
                 <RatingBar
                     android:id="@+id/rating_light"
