--- a/app/src/main/res/layout/fragment_app_search_id_pw.xml
+++ b/app/src/main/res/layout/fragment_app_search_id_pw.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/login_background_color">
@@ -94,10 +95,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:textColor="@color/black"
+                android:layout_marginTop="70dp"
                 android:layout_marginStart="20dp"
                 android:textStyle="bold"
                 android:textSize="20sp"
-                android:layout_marginTop="90dp"
                 android:text="비밀번호 찾기"/>
 
             <EditText
@@ -149,10 +150,64 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="25dp"
                 android:text="비밀번호는 ○○○○○ 입니다."
                 android:textColor="@color/black"
                 android:inputType="text" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/to_login_Page_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:text="로그인"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10dp"
+                    android:textSize="14dp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/to_login_Page_Line"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    app:layout_constraintEnd_toEndOf="@+id/to_login_Page_textView"
+                    app:layout_constraintStart_toStartOf="@+id/to_login_Page_textView"
+                    app:layout_constraintTop_toBottomOf="@+id/to_login_Page_textView" />
+
+                <TextView
+                    android:id="@+id/to_signUp_Page_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:text="회원가입"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10dp"
+                    android:textSize="14dp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/to_login_Page_textView" />
+
+                <TextView
+                    android:id="@+id/to_signUp_Page_Line"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    app:layout_constraintEnd_toEndOf="@+id/to_signUp_Page_textView"
+                    app:layout_constraintStart_toStartOf="@+id/to_signUp_Page_textView"
+                    app:layout_constraintTop_toBottomOf="@+id/to_signUp_Page_textView" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
