마이페이지 프로필 사진 보이도록 함 // 프로필 사진 설정 x의 경우, 기존 예시 이미지가 나오도록 함

--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -56,30 +56,48 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <Button
-                    android:id="@+id/change_information_button2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:background="@drawable/yellow_button"
-                    android:text="정보수정"
-                    android:textColor="#FFFFFF"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/nickname2"
-                    app:layout_constraintTop_toBottomOf="@+id/nickname2" />
+<!--                <de.hdodenhof.circleimageview.CircleImageView-->
+<!--                    android:id="@+id/circle_iv"-->
+<!--                    android:layout_width="120dp"-->
+<!--                    android:layout_height="120dp"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:layout_marginStart="25dp"-->
+<!--                    android:background="@android:color/transparent"-->
+<!--                    android:src="@drawable/been"-->
+<!--                    app:civ_border_color="@color/brown"-->
+<!--                    app:civ_border_width="3dp"-->
+<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintTop_toTopOf="parent" />-->
 
-                <Button
-                    android:id="@+id/logout_button2"
+                <ImageView
+                    android:id="@+id/profileImage"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="25dp"
+                    android:background="@drawable/image_view_circle"
+                    app:civ_border_color="@color/brown"
+                    app:civ_border_width="3dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
+
+                <TextView
+                    android:id="@+id/level2"
                     android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:background="@drawable/yellow_button"
-                    android:text="로그아웃"
-                    android:textColor="#FFFFFF"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="5dp"
+                    android:textColor="@color/orange"
+                    android:textSize="20sp"
                     android:textStyle="bold"
+                    android:clickable="true"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.33"
-                    app:layout_constraintStart_toEndOf="@+id/change_information_button2"
-                    app:layout_constraintTop_toTopOf="@+id/change_information_button2" />
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toEndOf="@+id/profileImage"
+                    app:layout_constraintTop_toTopOf="@+id/profileImage" />
 
                 <TextView
                     android:id="@+id/nickname2"
@@ -95,44 +113,30 @@
                     app:layout_constraintStart_toStartOf="@+id/level2"
                     app:layout_constraintTop_toBottomOf="@+id/level2" />
 
-                <TextView
-                    android:id="@+id/level2"
+                <Button
+                    android:id="@+id/change_information_button2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="10dp"
-                    android:textColor="@color/orange"
-                    android:textSize="20sp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/yellow_button"
+                    android:text="정보수정"
+                    android:textColor="@color/white"
                     android:textStyle="bold"
-                    android:clickable="true"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toEndOf="@+id/mypage_profile_image2"
-                    app:layout_constraintTop_toTopOf="@+id/mypage_profile_image2" />
-
-                <ImageView
-                    android:id="@+id/mypage_profile_image2"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:layout_marginStart="30dp"
-                    android:src="@drawable/edge_circle_brown"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toStartOf="@+id/nickname2"
+                    app:layout_constraintTop_toBottomOf="@+id/nickname2" />
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_marginStart="7dp"
-                    android:layout_marginTop="7dp"
-                    android:layout_marginEnd="7dp"
-                    android:layout_marginBottom="7dp"
-                    android:src="@drawable/ic_launcher_background"
-                    app:layout_constraintBottom_toBottomOf="@+id/mypage_profile_image2"
-                    app:layout_constraintEnd_toEndOf="@+id/mypage_profile_image2"
-                    app:layout_constraintStart_toStartOf="@+id/mypage_profile_image2"
-                    app:layout_constraintTop_toTopOf="@+id/mypage_profile_image2" />
+                <Button
+                    android:id="@+id/logout_button2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:background="@drawable/yellow_button"
+                    android:text="로그아웃"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.33"
+                    app:layout_constraintStart_toEndOf="@+id/change_information_button2"
+                    app:layout_constraintTop_toTopOf="@+id/change_information_button2" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
