카페디테일 -> 리뷰 카페디테일 -> 리뷰 + 코멘토리 작성 후, 뒤로가기 클릭 시, 작성했던 리뷰페이지 스택 삭제

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -71,7 +71,9 @@
             app:destination="@id/navigation_review_cafelist" />
         <action
             android:id="@+id/review_to_cafe_detail"
-            app:destination="@id/navigation_cafe_detail" />
+            app:destination="@id/navigation_cafe_detail"
+            app:popUpTo="@id/navigation_cafe_detail"
+            app:popUpToInclusive="true"/>
     </fragment>
 
     <fragment
@@ -186,7 +188,9 @@
 
         <action
             android:id="@+id/review_comment_to_cafe_detail"
-            app:destination="@id/navigation_cafe_detail" />
+            app:destination="@id/navigation_cafe_detail"
+            app:popUpTo="@id/navigation_cafe_detail"
+            app:popUpToInclusive="true"/>
     </fragment>
 
     <fragment
