--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/list"
         android:title="@string/cafe_list" />
     <item
-        android:id="@+id/navigation_review"
+        android:id="@+id/navigation_bottom_review"
         android:icon="@drawable/review"
         android:title="@string/title_review" />
 
